# Modern-C-BlockChain-Node

./: CMakeLists.txt  README.md  config.json.example
src/: api.cpp  api.h  api.hpp  main.cpp
src/Blockchain/: Blockchain.cpp  Blockchain.h
src/Mempool/: Mempool.cpp  Mempool.h
src/Telemetry/: TelemetryHandler.cpp  TelemetryHandler.hpp
src/Wallet/: Wallet.cpp  Wallet.h
src/core/: Block.cpp  Block.h  Transaction.cpp  Transaction.h
src/crypto/: Utils.cpp  Utils.h
src/net/: Message.h  P2PServer.cpp  P2PServer.h  PeerClient.cpp  PeerClient.h  PeerSession.cpp  PeerSession.h
